testing/framework/resources/Advanced/Failing/mondrian/query5665.q
select time_by_day.the_year as c0, nation.nation_name as c1, sum(sales_fact_1997.unit_sales) as m0 from time_by_day as time_by_day, sales_fact_1997 as sales_fact_1997, (SELECT * FROM (VALUES ('USA', 'US'), ('Mexico', 'MX'), ('Canada', 'CA')) AS t (nation_name, nation_shortcode)) as nation, store as store where sales_fact_1997.time_id = time_by_day.time_id and time_by_day.the_year = 1997 and sales_fact_1997.store_id = store.store_id and store.store_country = nation.nation_name group by time_by_day.the_year, nation.nation_name;
